# Cython-Project-Template

./: .flake8  .gitignore  .ruff.toml  LICENSE.txt  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
src/: __main__.py  prime_finder_configs.py
src/cython_extensions/: __init__.py
src/cython_extensions/cppIsPrime/: cppPrimeChecker.cp311-win_amd64.pyd  cppPrimeChecker.cpp  cppPrimeChecker.pxd  cppPrimeChecker.pyi  cppPrimeChecker.pyx
src/cython_extensions/cppPrimeFinder/: cppPrimeFinder.cp311-win_amd64.pyd  cppPrimeFinder.cpp  cppPrimeFinder.pyi  cppPrimeFinder.pyx
src/cython_extensions/isPrime/: primeChecker.c  primeChecker.cp311-win_amd64.pyd  primeChecker.pxd  primeChecker.pyi  primeChecker.pyx
src/cython_extensions/optimizedPrimeFinder/: optimizedPrimeFinder.c  optimizedPrimeFinder.cp311-win_amd64.pyd  optimizedPrimeFinder.pyi  optimizedPrimeFinder.pyx
src/cython_extensions/primeFinder/: primeFinder.c  primeFinder.cp311-win_amd64.pyd  primeFinder.pyi  primeFinder.pyx
src/extensions/: __init__.py
src/extensions/optimizedPrimeFinder/: optimizedPrimeFinder.c  optimizedPrimeFinder.cp311-win_amd64.pyd  optimizedPrimeFinder.pyi  optimizedPrimeFinder.pyx
src/extensions/primeFinder/: primeFinder.py
src/python_packages/: __init__.py
src/python_packages/code_runner/: code_runner.py
src/python_packages/prime_finder/: prime_finder.py
