[metadata]
name = ProjectName # Modify this to your project name.
version = 1.0.0
description = Describe you project here. # Modify this to your project description.
long_description_content_type = text/markdown
long_description = file: README.md
author = Your Name # Modify this to your name.
author_email = Your Email # Modify this to your email.
license = MIT
license_files = LICENSE
platforms = [win32, linux, darwin]
url = Your Project URL  # Modify this to your project URL.
keywords = Python, Cython # or any other keywords
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:

# Modify this to your package name. This is very important as it affects how you will import your packages.
package_dir =
    PackageName = src

install_requires = file: requirements.txt

[options.package_data]
# Modify this to you package name. Include any other files/folders directly in the `src` directory be added to be copied when installing the package.
PackageName =
    Images/*
    SFX/*

# Same as above but this affects all the packages (and the sub-packages) in the project.
# * =
#     *.pyi
#     *.pxd

# To specifically select files in a certain sub-package, use the following syntax:
# PackageName.sub_package =
#     *.extension1
#     *.extension2


# The same concept but exclude the files/folders from the package instead.
# [options.exclude_package_data]
# * =
#     *.pyc
#     __pycache__
#     *.pxd

# This option is only useful if you installed the package. It defines the function
# that will be called when the package name is typed in the command prompt.
# [options.entry_points]
# console_scripts =
#    PackageName = PackageName.fileName:functionName # Ex -> PackageName.__main__:main
