[metadata]
# Requires modification.
name = PackageName
description = Describe you project here.
author = Your Name
author_email = Your Email
version = 1.0.0
url = Your Project URL
keywords = Python, Cython # Add more keywords.
platforms = [win32, linux, darwin]
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    Topic :: Utilities

# No modification needed.
license = MIT
license_files = LICENSE
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:

# Modify this to your package name. This is very important as it affects how you referer to the packages.
package_dir =
    PackageName = src

install_requires = file: requirements.txt

# Docs: https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[options.package_data]
# Modify this to your package name. Include any other files/folders directly in the `src` directory be added to be copied when installing the package.
PackageName =
    Images/*
    SFX/*

# Same as above but this affects all the packages (and the sub-packages) in the project.
* =
    *.pyi
    *.pxd

# To specifically select files in a certain sub-package, use the following syntax:
# PackageName.cython_extensions.isPrime =
#     *.pxd


# The same concept but exclude the files/folders from the package instead.
[options.exclude_package_data]
* =
    *.pyc
    __pycache__

# This option is only useful if you installed the package. It defines the function
# that will be called when the package name is typed in the command prompt.
# [options.entry_points]
# console_scripts =
#    PackageName = PackageName.fileName:functionName # Ex -> PackageName.__main__:main
